Fixed body overflow-x issue on homepage in mobile devices

--- a/general.css
+++ b/general.css
@@ -12,11 +12,14 @@ body {
     font-family: "Nunito", sans-serif;
     font-size: 1.7rem;
     overflow-x: hidden;
+    max-width: 100%;
     letter-spacing: 1.1px;
     line-height: 1.5;
 }
 
 header {
+    display: flex;
+    align-items: center;
     padding: 15px;
 }
 
@@ -32,7 +35,7 @@ select {
     padding: 15px 20px;
     font-family: inherit;
     outline: none;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     border-radius: 10px;
     border: 2px solid black;
 }
@@ -91,6 +94,12 @@ b {
         right: 0;
         background-color: white;
         border-bottom: 2px solid black;
+    }
+
+    header a.header-logo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     h1 {
